Refactor code structure for improved readability and maintainability

--- a/TONYANG.html
+++ b/TONYANG.html
@@ -1396,7 +1396,7 @@
                                     <div class="body-view">
                                         <div class="view-label">FRONT VIEW</div>
                                         <div class="body-image-container" id="frontContainer">
-                                            <img src="body-front.png" alt="Body Front" class="body-image">
+                                            <img src="images/body-front.png" alt="Body Front" class="body-image">
                                         </div>
                                     </div>
                                     
